# squeal

./: .ocamlformat  README.me  dune-project  notes.md  squeal.opam
example/: db.ml  dune  example.ml
src/: dune  squeal.ml  squeal.mli
test/: dune  test_squeal.ml
